--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.5.7",
     "node-schedule": "^1.2.5",
     "nodemailer": "^4.4.0",
+    "sqlite3": "^4.1.0",
     "superagent": "^3.8.1"
   }
 }
